<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/march_detail_imageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/march_image_height"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:contentDescription="@string/march_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/placeholder_image" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/empty_textView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/march_image_height" />
            </LinearLayout>

            <com.project.segunfrancis.citizenmarch.utility.MaxWidthLinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:elevation="2dp"
                android:maxWidth="@dimen/detail_card_max_width"
                android:padding="@dimen/text_input_horizontal_margin"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/PrimaryDetailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title" />

                <TextView
                    android:id="@+id/march_detail_title_TV"
                    style="@style/SecondaryDetailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Quisque malesuada placerat"/>

                <TextView
                    style="@style/PrimaryDetailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description" />

                <TextView
                    android:id="@+id/march_detail_description_TV"
                    style="@style/SecondaryDetailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Praesent vestibulum dapibus nibh. Donec vitae sapien ut libero venenatis faucibus. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. Ut leo. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus."/>

                <TextView
                    style="@style/PrimaryDetailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location" />

                <TextView
                    android:id="@+id/march_detail_location_TV"
                    style="@style/SecondaryDetailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Quisque malesuada placerat"/>

                <TextView
                    style="@style/PrimaryDetailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hashtags" />

                <TextView
                    android:id="@+id/march_detail_hashtag_TV"
                    style="@style/SecondaryDetailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="#Quisque #malesuada #placerat"/>

                <TextView
                    style="@style/PrimaryDetailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/created_by" />

                <TextView
                    android:id="@+id/march_detail_created_by_TV"
                    style="@style/SecondaryDetailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Quisque malesuada"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginBottom="@dimen/text_input_horizontal_margin">
                    <TextView
                        android:id="@+id/march_detail_time_TV"
                        style="@style/PrimaryDetailText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawablePadding="8dp"
                        android:drawableStart="@drawable/ic_time"
                        tools:text="11:59 am" />

                    <TextView
                        android:id="@+id/march_detail_date_TV"
                        style="@style/PrimaryDetailText"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:drawableStart="@drawable/ic_date_"
                        android:drawablePadding="8dp"
                        tools:text="12th December"/>
                </LinearLayout>

                <TextView
                    style="@style/PrimaryDetailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attending" />

                <TextView
                    android:id="@+id/march_detail_attending"
                    style="@style/SecondaryDetailText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Quisque malesuada"/>
            </com.project.segunfrancis.citizenmarch.utility.MaxWidthLinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>